# space-rocks

./: CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.claude/skills/docs/: README.md  SKILL.md
.claude/skills/execute/: README.md  SKILL.md
.claude/skills/plan/: README.md  SKILL.md
.claude/skills/refine/: README.md  SKILL.md
.claude/skills/review/: README.md  SKILL.md
docs/: INDEX.md
docs/technical/: asteroid-plugin.md  bullet-plugin.md  collision-plugin.md  game-architecture.md  score-plugin.md  ship-plugin.md  sound-plugin.md
docs/user/: how-to-play.md
plans/: level-progression.md  lives-and-game-over.md  project-bootstrap.md  score-system.md  sound-effects.md  thrust-enhancements.md
reviews/: level-progression.md  lives-and-game-over-task5.md  lives-and-game-over-task6.md  lives-and-game-over.md  project-bootstrap-task1.md  project-bootstrap-task2.md  project-bootstrap-task4.md  project-bootstrap-task5.md  project-bootstrap-task6.md  project-bootstrap-task7.md  score-system.md  sound-effects.md  thrust-enhancements.md
specs/: level-progression.md  lives-and-game-over.md  project-bootstrap.md  score-system.md  sound-effects.md  thrust-enhancements.md
specs/diagrams/: initial-concept.excalidraw  level-spawn-flow.excalidraw  lives-game-over-states.excalidraw  score-system.excalidraw  sound-effects-initial.excalidraw  thrust-enhancements.excalidraw
src/: components.rs  config.rs  main.rs
src/plugins/: asteroid.rs  bullet.rs  collision.rs  game_state.rs  hud.rs  level.rs  mod.rs  score.rs  ship.rs  sound.rs
(+1 files in other folders)
