[package]
name = "space_rocks"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "bevy_asset",
    "bevy_text",
    "bevy_ui",
    "bevy_state",
    "default_font",
    "tonemapping_luts",
    "x11",
] }
rand = "0.8"
